Error en editar pedidos, resuelto. Obtenemos datos para editar
